--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,14 @@
 *.o
 *.a
 *.so
+*.exe
+*.test
+*.prof
 
 # Folders
 _obj
 _test
-vendor
+vendor/
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -20,6 +23,4 @@ _cgo_export.*
 
 _testmain.go
 
-*.exe
-*.test
-*.prof
+go.sum
