--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: go
 
 go:
-  - "1.10"
+- "1.11.x"
+
+install:
+- env GO111MODULE=on go mod download
 
 script:
- - go test -v ./...
+- env GO111MODULE=on go test ./...
