--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ language: go
 go:
 - "1.11.x"
 
+env:
+  global:
+  - GO111MODULE=on
+
 install:
-- env GO111MODULE=on go mod download
+- go mod download
 
 script:
-- env GO111MODULE=on go test ./...
+- go test ./...
