Update go.mod files

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
 - go mod download
 
 script:
-- go test ./...
-- go test ./rwi/...
+- go test ./exitcode/...
+- go test ./file/...
 - go test ./prompt/...
+- go test ./rwi/...
+- go test ./signal/...
