--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,18 +6,14 @@ on:
   pull_request:
 jobs:
   golangci:
-    strategy:
-      matrix:
-        go-version: [1.16.x]
-        os: [ubuntu-latest]
     name: lint
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-          version: v1.37
+          version: latest
       - name: testing
         run: go test ./...
