--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,5 +18,7 @@ jobs:
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: latest
+          # Optional: golangci-lint command line arguments.
+          args: --enable gosec
       - name: testing
         run: go test ./...
