--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,18 @@
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
-*.o
-*.a
-*.so
+# Binaries for programs and plugins
 *.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
 *.test
-*.prof
 
-# Folders
-_obj
-_test
-vendor/
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
-# Architecture specific extensions/prefixes
-*.[568vq]
-[568vq].out
+# Dependency directories (remove the comment below to include it)
+# vendor/
 
-*.cgo1.go
-*.cgo2.c
-_cgo_defun.c
-_cgo_gotypes.go
-_cgo_export.*
-
-_testmain.go
+# Other directories and files
+.task/
