--- a/.github/workflows/vulns.yml
+++ b/.github/workflows/vulns.yml
@@ -2,18 +2,20 @@ name: vulns
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
 jobs:
   vulns:
     name: Vulnerability scanner
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: ^1.17
+          go-version-file: 'go.mod'
+      - name: install depm
+        run: go install github.com/goark/depm@latest
       - name: WriteGoList
-        run: go list -json -m all > go.list
+        run: depm list --json > go.list
       - name: Nancy
         uses: sonatype-nexus-community/nancy-github-action@main
